Fix color contrast and performance API issues

--- a/public/styles.css
+++ b/public/styles.css
@@ -1997,7 +1997,7 @@ textarea.w-select {
   --neutral-300: #e5ecf5;
   --neutral-100-65: #ffffffa6;
   --shadow-small-2: #a3a6ff21;
-  --rose: #ee265f;
+  --rose: #d31f56;
   --shadow-small-1: #0c0c0c0a;
   --mini-card-shadow: #448cfc1a;
   --icon-shadow: #448cfc14;
@@ -18680,7 +18680,7 @@ textarea.w-select {
   --neutral-300: #e5ecf5;
   --neutral-100-65: #ffffffa6;
   --shadow-small-2: #a3a6ff21;
-  --rose: #ee265f;
+  --rose: #d31f56;
   --shadow-small-1: #0c0c0c0a;
   --mini-card-shadow: #448cfc1a;
   --icon-shadow: #448cfc14;
